--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html> 
 <html lang="en-US" prefix="og: https://ogp.me/ns#" class="desktop landscape no-touch js_active  vc_desktop  vc_transform  vc_transform  cp-overflow-hidden"><head>
 
   <!-- Meta UTF8 charset -->
